[project]
name = "vitascale"
version = "1.0.0"
description = "Long-horizon dynamic cloud resource orchestrator OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
